--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -52,7 +52,7 @@
         <item name="android:paddingLeft">0dip</item>
      </style>
 
-    <style name="ComposeFieldLayout" parent="android:Widget.Holo.Light.EditText">
+    <style name="ComposeFieldLayout" parent="android:Widget.Holo.EditText">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:addStatesFromChildren">true</item>
@@ -90,7 +90,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">12sp</item>
-        <item name="android:textColor">#777777</item>
+        <item name="android:textColor">#AAAAAA</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textAllCaps">true</item>
     </style>
@@ -107,13 +107,13 @@
         <item name="android:maxLines">1</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textColor">@android:color/white</item>
         <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
         <item name="android:ellipsize">end</item>
     </style>
 
     <style name="attachment_size" parent="@style/attachment_name">
-        <item name="android:textColor">#555555</item>
+        <item name="android:textColor">#efefef</item>
     </style>
 
     <style name="attachment_thumbnail">
@@ -136,7 +136,7 @@
 
     <style name="unreadCountActionBar" parent="unreadCount">
         <item name="android:layout_marginRight">8dp</item>
-        <item name="android:textColor">#bbbbbb</item>
+        <item name="android:textColor">#c0c0c0</item>
         <!-- Use dp rather than sp for size since starts large and must not get too large -->
         <item name="android:textSize">36dp</item>
     </style>
@@ -151,7 +151,7 @@
 
     <style name="AccountSpinnerDropdownTextSecondary">
         <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
-        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textColor">@android:color/white</item>
     </style>
 
     <style name="AccountSpinnerAnchorTextPrimary" parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Title">
