--- a/res/color/text_color_primary_invertible.xml
+++ b/res/color/text_color_primary_invertible.xml
@@ -2,9 +2,9 @@
 <!-- Copyright (C) 2011 Google Inc. All Rights Reserved. -->
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_enabled="false"
-        android:color="#ff999999"/>
+        android:color="#ffefefef"/>
     <item android:state_activated="true"
         android:color="@android:color/white" />
     <item
-        android:color="@android:color/black" />
+        android:color="@android:color/white" />
 </selector>
